Ensure that the flash message is always visible
This makes the flash message stick at the top of the view point.

--- a/src/api/app/assets/stylesheets/webui2/tabs-component.scss
+++ b/src/api/app/assets/stylesheets/webui2/tabs-component.scss
@@ -18,6 +18,6 @@ ul.nav.nav-tabs li.nav-item {
   }
 
   .dropdown-menu {
-    z-index: 1021;
+    z-index: 1050;
   }
 }
